k8s/archiva.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  labels:
    app: htk-artifactory
spec:
  selector:
    matchLabels:
      app: htk-artifactory
  replicas: 1
  template:
    metadata:
      labels:
        app: htk-artifactory
    spec:
      nodeSelector:
        type: core
      containers:
        - name: artifactory
          image: "kgyrtkirk/htk-artifactory:latest"
          #imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - mountPath: /artifactory-data
              name: artifactory-data
          resources:
            limits:
              cpu: 1500m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 800Mi

      volumes:
        - name: artifactory-data
          emptyDir: {}
