k8s/artifactory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  labels:
    app: htk-artifactory
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: htk-artifactory
  replicas: 1
  template:
    metadata:
      labels:
        app: htk-artifactory
    spec:
      #nodeSelector:
      #  type: core
      securityContext:
        sysctls:
        - name: net.ipv4.tcp_rmem
          value: "4096 87380 16777216"
        - name: net.ipv4.tcp_wmem
          value: "4096 16384 16777216"
        - name: net.core.somaxconn
          value: "256000"
        - name: net.ipv4.tcp_syncookies
          value: "1"
        - name: net.ipv4.ip_local_port_range
          value: "1024 65535"
        - name: net.ipv4.tcp_tw_reuse
          value: "1"
        - name: net.ipv4.tcp_congestion_control
          value: "cubic"
        - name: net.ipv4.tcp_max_syn_backlog
          value: "256000"
        fsGroup: 1030
      containers:
        - name: artifactory
          image: "docker.bintray.io/jfrog/artifactory-oss:6.23.13"
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - mountPath: /var/opt/jfrog/artifactory
              name: artifactory-data
          resources:
            requests:
              cpu: 1500m
              memory: 4Gi
      volumes:
        - name: artifactory-data
          persistentVolumeClaim:
            claimName: artifactory-data2
        - name: artifactory-work
          emptyDir: {}
