k8s/artifactory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory
  labels:
    app: htk-artifactory
spec:
  selector:
    matchLabels:
      app: htk-artifactory
  replicas: 1
  template:
    metadata:
      labels:
        app: htk-artifactory
    spec:
      nodeSelector:
        type: core
      securityContext:
        fsGroup: 1030
      containers:
        - name: artifactory
          image: "docker.bintray.io/jfrog/artifactory-oss:6.18.1"
          ports:
            - name: http
              containerPort: 8081
          volumeMounts:
            - mountPath: /var/opt/jfrog
              name: artifactory-data
          resources:
            limits:
              cpu: 1500m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 800Mi
      volumes:
        - name: artifactory-data
          persistentVolumeClaim:
            claimName: artifactory-data
        - name: artifactory-work
          emptyDir: {}
