k8s/artifactory-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: artifactory-internal
  labels:
    app: htk-artifactory
spec:
  selector:
    app: htk-artifactory
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  labels:
    app: htk-artifactory
spec:
  type: LoadBalancer
  selector:
    app: htk-artifactory
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
