k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: htk-jenkins
spec:
  type: NodePort 
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: htk-jenkins
