k8s/rsync.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rsync
  labels:
    app: htk-rsync
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: htk-rsync
  replicas: 1
  template:
    metadata:
      labels:
        app: htk-rsync
    spec:
      securityContext:
        fsGroup: 1000
        sysctls:
        - name: net.ipv4.tcp_rmem
          value: "4096 87380 16777216"
        - name: net.ipv4.tcp_wmem
          value: "4096 16384 16777216"
        - name: net.core.somaxconn
          value: "256000"
        - name: net.ipv4.tcp_syncookies
          value: "1"
        - name: net.ipv4.ip_local_port_range
          value: "1024 65535"
        - name: net.ipv4.tcp_tw_reuse
          value: "1"
        - name: net.ipv4.tcp_congestion_control
          value: "cubic"
        - name: net.ipv4.tcp_max_syn_backlog
          value: "256000"
      #nodeSelector:
      #  type: core
      containers:
      - name: rsync
        image: kgyrtkirk/htk-rsync
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 15000m
            memory: 20000Mi
          requests:
            cpu: 500m
            memory: 4000Mi
        ports:
        - containerPort: 873
        volumeMounts:
          - mountPath: "/data"
            name: work
      volumes:
        - name: work
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rsync
  labels:
    app: htk-rsync
spec:
  type: ClusterIP
  selector:
    app: htk-rsync
  ports:
    - name: rsync
      port: 873
      protocol: TCP
