k8s/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: hive-test-kube
spec:
  tls:
    - hosts:
      - hiveci.apps.kc-04-ocp4.cloudera.com
      secretName: htk-tls-secret
  ingressClassName: nginx
  rules:
    - host: hiveci.apps.kc-04-ocp4.cloudera.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 8080
